updated and improved scripts for the tutorial

--- a/bike-tutorial/javascript/index.html
+++ b/bike-tutorial/javascript/index.html
@@ -5,7 +5,7 @@
     <script src="../../../terminus-client/dist/terminus-client.min.js"></script>
     <script src="./bike-tutorial.js"></script>
     <div id="myresults">
-        <a href="#" onClick='runTutorial("http://localhost:6363", "root", "bikes")'>Load Data</a>
+        <a href="#" onClick='runTutorial("http://195.201.12.87:6365/", "connectors wanna plans compressed", "bikes")'>Load Data</a>
     </div>
 </body>
 </html>
