--- a/bike-tutorial/javascript/index.html
+++ b/bike-tutorial/javascript/index.html
@@ -5,6 +5,7 @@
     <script src="../../../terminus-client/dist/terminus-client.min.js"></script>
     <script src="./bike-tutorial.js"></script>
     <div id="myresults">
+        <a href="#" onClick='runTutorial("http://localhost:6363/", "root", "bike_data")'>Load Data</a>
     </div>
 </body>
 </html>
