added viewing to scripts

--- a/politics-tutorial/javascript/dublin-council.html
+++ b/politics-tutorial/javascript/dublin-council.html
@@ -1,7 +1,7 @@
 <html>
 <head><title>Politics Tutorial - Dublin Council Voting Data - Launch Page</title></head>
 <body>
-    <script src="../../../terminus-dashboard/dist/terminus-dashboard.min.js"></script>
+    <script src="https://terminusdb.github.io/terminus-dashboard/dist/terminus-dashboard.min.js"></script>
     <script src="https://d3js.org/d3.v5.min.js"></script>
     <script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css">
