fixed some bugs in import rdf

--- a/seshat-tutorial/index.html
+++ b/seshat-tutorial/index.html
@@ -13,7 +13,7 @@
     <script src="./importShapefiles.js"></script>
     <script src="./libs.js"></script>
     <script>
-    connectToServer("http://localhost:6363/", "root", "seshat3")
+    connectToServer("http://localhost:6363/", "root", "seshat_tutorial")
     </script>
     <div id="myresults">
         <a href="#" onClick='runTutorial()'>Import All Seshat Data</a>
