fixed bug in import annotations

--- a/seshat-tutorial/index.html
+++ b/seshat-tutorial/index.html
@@ -26,7 +26,8 @@
         <p><a href="#" onClick='runSegment("ImportProperties")'>Import Basic Properties</a></p>
         <p><a href="#" onClick='runSegment("ImportProperties2")'>Import Epistemic Properties</a></p>
         <p><a href="#" onClick='runSegment("ImportProperties3")'>Import Extended Properties</a></p>
-        <p><a href="#" onClick='runSegment("ImportAnnotations")'>Import Annotations</a></p>
+        <p><a href="#" onClick='runSegment("ImportAnnotations")'>Import Polity Annotations</a></p>
+        <p><a href="#" onClick='runSegment("ImportAnnotations2")'>Import Value Annotations</a></p>
         <p><a href="#" onClick='runSegment("ImportIronSchema")'>Import CSV (Extend schema)</a></p>
         <p><a href="#" onClick='runSegment("ImportIronData")'>Import CSV (Iron data)</a></p>
         <p><a href="#" onClick='runSegment("ImportShapes")'>Import Shapefile CSVs</a></p>
