a bunch of new tutorialish material

--- a/seshat-tutorial/index.html
+++ b/seshat-tutorial/index.html
@@ -14,7 +14,7 @@
     <script src="./importShapefiles.js"></script>
     <script src="./libs.js"></script>
     <script>
-    connectToServer("http://localhost:6363/", "root", "seshat_pt")
+    connectToServer("http://localhost:6363/", "root", "seshat")
     </script>
     <div id="myresults">
         <a href="#" onClick='runTutorial()'>Import All Seshat Data</a>
