Update require.config links
See https://github.com/terminusdb/terminusdb-client-python/pull/215

--- a/bike-tutorial/python/bike-graph.html
+++ b/bike-tutorial/python/bike-graph.html
@@ -16,8 +16,8 @@
 
               require.config({
                 paths: {
-                    TerminusClient:'https://unpkg.com/@terminusdb/terminusdb-client@3.0.3/dist/terminusdb-client.min',
-                    TerminusDBGraph:'https://dl.bintray.com/terminusdb/terminusdb/dev/terminusdb-d3-graph.min'
+                    TerminusClient:'https://cdn.jsdelivr.net/npm/@terminusdb/terminusdb-client@4.3.1/dist/terminusdb-client.min',
+                    TerminusDBGraph:'https://cdn.jsdelivr.net/npm/@terminusdb/terminusdb-react-components@4.3.1/dist/terminusdb-d3-graph.min'
                 }
               });
 
